--- a/Web/Prototype/css/main-perfil.css
+++ b/Web/Prototype/css/main-perfil.css
@@ -122,7 +122,7 @@ Buttons Styles
 .btn-light:focus,
 .btn-light:active {
   background: transparent;
-  color: #fff;
+  color: #24242a;
   text-decoration: none;
 }
 
@@ -153,7 +153,7 @@ Buttons Styles
 }
 
 /* ==========================================================================
-Layout 
+Layout
 ========================================================================== */
 .dark-bg {
   background: #24242a;
