--- a/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
@@ -128,7 +128,7 @@
 
     <android.support.v7.widget.CardView
         app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadious="3dp"
+        app:cardCornerRadius="3dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
