--- a/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F0F0F0"
     android:orientation="vertical"
     tools:context="com.example.android.bookaway.selected_book">
 
     <android.support.v7.widget.CardView
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="3dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,12 +127,12 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="3dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -196,30 +196,8 @@
                 android:textColor="#212121"
                 android:textSize="16sp" />
 
-
-
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Avalie este livro:"
-        android:textColor="#212121"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        />
-
-    <RatingBar
-        android:id="@+id/ratingBarAlemanha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:numStars="5"
-        android:rating="0.0"
-        android:stepSize="0.5" />
-
 </LinearLayout>
 
