--- a/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/activity_selected_book.xml
@@ -198,6 +198,15 @@
 
         </LinearLayout>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/show_interest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="10dp"
+            android:src="@android:drawable/star_big_off" />
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
+
 
