--- a/Mobile/BookAway/app/src/main/res/layout/content_cadastro.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_cadastro.xml
@@ -7,8 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.bookaway.selected_book">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- Login progress -->
     <ProgressBar
@@ -36,10 +35,26 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Login"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:layout_marginBottom="20dp"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -72,32 +87,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="#64DD17"
-                android:textColor="#FFFFFF"
-                android:text="ENTRAR"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/logarFace"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="#039BE5"
-                android:textColor="#FFFFFF"
-                android:text="ENTRAR COM O FACEBOOK"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/loginCadastro"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:background="#4A148C"
                 android:textColor="#FFFFFF"
                 android:text="CADASTRAR"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginBottom="15dp"/>
 
         </LinearLayout>
     </ScrollView>
