--- a/Mobile/BookAway/app/src/main/res/layout/content_login.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_login.xml
@@ -1,5 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -8,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.bookaway.selected_book">
+    tools:context="com.example.android.bookaway.MainActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -36,26 +37,10 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Login"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:layout_marginBottom="20dp"/>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="Login"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -88,12 +73,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="#64DD17"
+                android:textColor="#FFFFFF"
+                android:text="ENTRAR"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/logarFace"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="#039BE5"
+                android:textColor="#FFFFFF"
+                android:text="ENTRAR COM O FACEBOOK"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/loginCadastro"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:background="#4A148C"
                 android:textColor="#FFFFFF"
                 android:text="CADASTRAR"
-                android:textStyle="bold"
-                android:layout_marginBottom="15dp"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</RelativeLayout>
