--- a/Mobile/BookAway/app/src/main/res/values/styles.xml
+++ b/Mobile/BookAway/app/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
+
+        <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">#2B2B2B</item>
-        <item name="colorPrimaryDark">#212121</item>
-        <item name="colorAccent">#404040</item>
-    </style>
+            <!-- Customize your theme here. -->
+            <item name="colorPrimary">#FFFFFF</item>
+            <item name="colorPrimaryDark">#212121</item>
+            <item name="colorAccent">#404040</item>
+        </style>
 
 </resources>
