--- a/Mobile/BookAway/app/src/main/res/layout/content_search.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_search.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.bookaway.SearchActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/search_recycle_view">
@@ -64,5 +64,5 @@
                 </LinearLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
-    </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 </RelativeLayout>
