--- a/Mobile/BookAway/app/src/main/res/layout/content_login.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_login.xml
@@ -28,7 +28,7 @@
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_marginTop="40dp">
 
@@ -78,16 +78,13 @@
                 android:text="ENTRAR"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/logarFace"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="#039BE5"
-                android:textColor="#FFFFFF"
-                android:text="ENTRAR COM O FACEBOOK"
-                android:textStyle="bold" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp" />
 
             <Button
                 android:id="@+id/loginCadastro"
