--- a/Mobile/BookAway/app/src/main/res/layout/activity_main.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +8,14 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
-            layout="@layout/app_bar_main"
-            />
+            layout="@layout/app_bar_main" />
+
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
@@ -27,11 +27,10 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:layout_height="match_parent"
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer"
-        />
+        app:menu="@menu/activity_main_drawer" />
 </android.support.v4.widget.DrawerLayout>
 
