--- a/Mobile/BookAway/app/src/main/res/layout/content_search.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_search.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.bookaway.SearchActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
+        android:id="@+id/search_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/search_recycle_view">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
                 <ImageView
-                    android:layout_width="0dp"
+                    android:id="@+id/search_book_image"
+                    android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:padding="10dp"
-                    android:src="@drawable/book_placeholder"
-                    android:id="@+id/search_book_image"/>
+                    android:src="@drawable/book_placeholder" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Título"
                     android:id="@+id/search_book_title"
-                    android:layout_toLeftOf="@id/search_book_image" />
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Coleção"
+                    android:layout_toLeftOf="@id/search_book_image"
+                    android:text="Título" />
+
+                <TextView
                     android:id="@+id/search_book_colection"
-                    android:layout_toLeftOf="@id/search_book_image"
-                    android:layout_below="@id/search_book_title"/>
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Autor"
-                    android:id="@+id/search_book_author"
+                    android:layout_below="@id/search_book_title"
                     android:layout_toLeftOf="@id/search_book_image"
-                    android:layout_below="@id/search_book_colection"/>
+                    android:text="Coleção" />
+
+                <TextView
+                    android:id="@+id/search_book_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/search_book_colection"
+                    android:layout_toLeftOf="@id/search_book_image"
+                    android:text="Autor" />
 
                 <LinearLayout
+                    android:id="@+id/search_minitags_group"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/search_minitags_group"
+                    android:layout_below="@id/search_book_author"
                     android:layout_toLeftOf="@id/search_book_image"
-                    android:layout_below="@id/search_book_author">
+                    android:orientation="horizontal">
 
                 </LinearLayout>
-            </RelativeLayout>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
