--- a/Mobile/BookAway/app/src/main/res/layout/content_user_account_info.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_user_account_info.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F0F0F0"
-    tools:context="com.example.alunoinf.myapplication.UserAccountInfoActivity">
+    android:background="#F0F0F0">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,112 +19,108 @@
             app:cardBackgroundColor="#FFFFFF"
             app:cardCornerRadius="3dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:gravity="start">
-
-            <ImageView
-                android:id="@+id/user_photo"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/user_placeholder" />
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/user_photo"
-                android:text="Usuário X"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_below="@id/user_photo">
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:gravity="start">
 
-                <View
-                    android:id="@+id/header_divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@android:color/darker_gray" />
-
-                <TextView
-                    android:id="@+id/user_email_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/user_photo"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="24dp"
-                    android:text="e-Mail:"
-                    android:textColor="#000000"
-                    android:textSize="25dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/user_email_body"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="15dp"
-                    android:text="UsuárioX@exemplo.com"
-                    android:textColor="#000000"
-                    android:textSize="25dp"
-                    android:textStyle="italic" />
-
-                <TextView
-                    android:id="@+id/user_password_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="24dp"
-                    android:text="Informações de contato:"
-                    android:textColor="#000000"
-                    android:textSize="25dp"
-                    android:textStyle="bold" />
-
-
-
-                <TextView
-                    android:id="@+id/user_contact_body"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="24dp"
-                    android:text="Insira suas informações de contado aqui."
-                    android:textColor="#000000"
-                    android:textSize="20dp" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/user_placeholder" />
 
-                <Button
-                    android:id="@+id/editar_perfil"
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@id/user_contact_body"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="24dp"
-                    android:textColor="#FFFFFF"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:background="#1E88E5"
-                    android:text="Editar Perfil"
-                    android:textAllCaps="true"
-                    android:onClick="editUserAccount"/>
-            </LinearLayout>
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@id/user_photo"
+                    android:gravity="center"
+                    android:text="Usuário X"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/user_photo"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/header_divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@android:color/darker_gray" />
+
+                    <TextView
+                        android:id="@+id/user_email_label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20sp"
+                        android:text="e-Mail:"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/user_email_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="15dp"
+                        android:text="UsuárioX@exemplo.com"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:id="@+id/user_password_label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="20sp"
+                        android:text="Informações de contato:"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/user_contact_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="24dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Insira suas informações de contado aqui."
+                        android:textColor="#000000"
+                        android:textSize="16sp" />
+
+                    <Button
+                        android:id="@+id/editar_perfil"
+                        android:layout_width="175dp"
+                        android:layout_height="36dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="24dp"
+                        android:layout_marginTop="8dp"
+                        android:background="#1E88E5"
+                        android:onClick="editUserAccount"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:text="Editar Perfil"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF" />
+                </LinearLayout>
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
 </RelativeLayout>
