--- a/Mobile/BookAway/app/src/main/res/layout/content_my_bookshelf.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_my_bookshelf.xml
@@ -112,6 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:background="@drawable/tag_sell"
+                                android:gravity="center"
                                 android:onClick="vender1"
                                 android:padding="6dp"
                                 android:text="Vender"
@@ -125,6 +126,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/tag_exchange"
+                                android:gravity="center"
                                 android:padding="6dp"
                                 android:text="Trocar"
                                 android:textAllCaps="true"
@@ -146,8 +148,9 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_marginRight="20dp"
                                 android:background="@drawable/tag_give_away"
+                                android:gravity="center"
                                 android:padding="5dp"
-                                android:text="  Doar"
+                                android:text="Doar"
                                 android:textAllCaps="true"
                                 android:textColor="#FFFFFF"
                                 android:textSize="14sp"
@@ -159,6 +162,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="5dp"
                                 android:background="@drawable/tag_borrow"
+                                android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Emprestar"
                                 android:textAllCaps="true"
@@ -263,6 +267,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:background="@drawable/tag_sell"
+                                android:gravity="center"
                                 android:onClick="vender1"
                                 android:padding="6dp"
                                 android:text="Vender"
@@ -276,6 +281,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/tag_exchange"
+                                android:gravity="center"
                                 android:padding="6dp"
                                 android:text="Trocar"
                                 android:textAllCaps="true"
@@ -297,8 +303,9 @@
                                 android:layout_marginBottom="5dp"
                                 android:layout_marginRight="20dp"
                                 android:background="@drawable/tag_give_away"
+                                android:gravity="center"
                                 android:padding="5dp"
-                                android:text="  Doar"
+                                android:text="Doar"
                                 android:textAllCaps="true"
                                 android:textColor="#FFFFFF"
                                 android:textSize="14sp"
@@ -310,6 +317,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="5dp"
                                 android:background="@drawable/tag_borrow"
+                                android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Emprestar"
                                 android:textAllCaps="true"
