--- a/Mobile/BookAway/app/src/main/res/drawable/tag_give_away.xml
+++ b/Mobile/BookAway/app/src/main/res/drawable/tag_give_away.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:radius="15dp"/>
+    <corners android:radius="15dp" />
     <size
         android:width="30dp"
         android:height="30dp" />
-    <solid
-        android:color="#00FF00" />
+    <solid android:color="#00FF00" />
 </shape>
