--- a/Mobile/BookAway/app/src/main/res/layout/content_search.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_search.xml
@@ -15,8 +15,7 @@
 
         <SearchView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </SearchView>
+            android:layout_height="wrap_content"></SearchView>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
@@ -40,8 +39,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/search_book_image1"
-                    android:textSize="40sp"
-                    android:text="Título" />
+                    android:text="Título"
+                    android:textSize="40sp" />
 
                 <TextView
                     android:id="@+id/search_book_colection1"
@@ -49,8 +48,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/search_book_title1"
                     android:layout_toRightOf="@id/search_book_image1"
-                    android:textSize="35sp"
-                    android:text="Coleção" />
+                    android:text="Coleção"
+                    android:textSize="35sp" />
 
                 <TextView
                     android:id="@+id/search_book_author1"
@@ -58,8 +57,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/search_book_colection1"
                     android:layout_toRightOf="@id/search_book_image1"
-                    android:textSize="30sp"
-                    android:text="Autor" />
+                    android:text="Autor"
+                    android:textSize="30sp" />
 
                 <LinearLayout
                     android:id="@+id/search_minitags_group1"
@@ -81,7 +80,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_exchange_1"
@@ -95,7 +94,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_borrow_1"
@@ -109,7 +108,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_give_1"
@@ -123,7 +122,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                 </LinearLayout>
             </RelativeLayout>
@@ -150,8 +149,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/search_book_image2"
-                    android:textSize="40sp"
-                    android:text="Título" />
+                    android:text="Título"
+                    android:textSize="40sp" />
 
                 <TextView
                     android:id="@+id/search_book_colection2"
@@ -159,8 +158,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/search_book_title2"
                     android:layout_toRightOf="@id/search_book_image2"
-                    android:textSize="35sp"
-                    android:text="Coleção" />
+                    android:text="Coleção"
+                    android:textSize="35sp" />
 
                 <TextView
                     android:id="@+id/search_book_author2"
@@ -168,8 +167,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/search_book_colection2"
                     android:layout_toRightOf="@id/search_book_image2"
-                    android:textSize="30sp"
-                    android:text="Autor" />
+                    android:text="Autor"
+                    android:textSize="30sp" />
 
                 <LinearLayout
                     android:id="@+id/search_minitags_group2"
@@ -191,7 +190,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_exchange_2"
@@ -205,7 +204,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_borrow_2"
@@ -219,7 +218,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tag_give_2"
@@ -233,7 +232,7 @@
                         android:textAllCaps="true"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                 </LinearLayout>
             </RelativeLayout>
