--- a/Mobile/BookAway/app/src/main/res/layout/content_user_account_edit.xml
+++ b/Mobile/BookAway/app/src/main/res/layout/content_user_account_edit.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F0F0">
@@ -144,12 +143,12 @@
                         android:layout_marginBottom="24dp"
                         android:layout_marginTop="8dp"
                         android:background="#00ff00"
+                        android:onClick="salvar"
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
                         android:text="Salvar"
                         android:textAllCaps="true"
-                        android:textColor="#FFFFFF"
-                        android:onClick="salvar"/>
+                        android:textColor="#FFFFFF" />
                 </LinearLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
