Atualizando menu lateral

--- a/Mobile/Ionic/BookAway/www/templates/favoritos.html
+++ b/Mobile/Ionic/BookAway/www/templates/favoritos.html
@@ -3,7 +3,7 @@
         <div id="favoritos-button-bar5" class=" button-bar ">
             <a ui-sref="menu.bookAway" id="favoritos-button26" style="font-weight:lighter;" class=" button button-positive  button-block button-outline icon ion-android-home ">Home</a>
             <a ui-sref="menu.meuPerfil" id="favoritos-button27" style="font-weight:lighter;" class=" button button-positive  button-block button-outline icon ion-android-contact ">Perfil</a>
-            <a ui-sref="menu.estante" id="favoritos-button28" style="font-weight:lighter;" class=" button button-positive  button-block button-outline icon ion-android-bookmark ">Estatente</a>
+            <a ui-sref="menu.estante" id="favoritos-button28" style="font-weight:lighter;" class=" button button-positive  button-block button-outline icon ion-android-bookmark ">Estante</a>
         </div>
         <ion-list id="favoritos-list6" class=" ">
             <ion-item class="item-thumbnail-left  " id="favoritos-list-item16">
