--- a/Mobile/Ionic/BookAway/www/templates/menu.html
+++ b/Mobile/Ionic/BookAway/www/templates/menu.html
@@ -14,7 +14,13 @@
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-null" class=" ">
+                <img
+                    item-width="33%"
+                    item-height="200px"
+                    ng-src="{{"img/livros/book.jpg"}}">
+                <ion-item id="menu-list-ultima-conexao" menu-close="" class="  ">Ultima Conexao: 22/07/2016</ion-item>
                 <ion-item id="menu-list-item1" ui-sref="menu.bookAway" menu-close="" class="  ">Livros em movimento</ion-item>
+                <ion-item id="menu-list-favoritos" ui-sref="menu.favoritos" menu-close="" class="  ">Favoritos</ion-item>
                 <ion-item id="menu-list-item8" ui-sref="menu.signup" menu-close="" class="  ">Cadastro</ion-item>
                 <ion-item id="menu-list-item2" ui-sref="menu.login" menu-close="" class="  ">Login</ion-item>
             </ion-list>
